@startumlclassDiagram
    class DeviceNetwork {
                 -Map~String, List~String~~ connections
                 +countPathsBetween(start: String, end: String) long
                 +countPathsThrough(start: String, end: String, via1: String, via2: String) long
             }

             class DeviceReader {
                 +readFrom(lines: List~String~) DeviceNetwork$
                 -extractOutputs(line: String) List~String~$
             }

             class PathFinder {
                 +count(graph: Map, current: String, target: String) long$
                 -trace(graph: Map, curr: String, target: String, memo: Map) long$
                 -memoize(memo: Map, key: String, value: long) long$
             }

             class Main_PartA {
                 <<Ejecutable - Parte A>>
                 +main(args: String[]) void$
             }

             class Main_PartB {
                 <<Ejecutable - Parte B>>
                 +main(args: String[]) void$
             }

             DeviceReader ..> DeviceNetwork : "Instancia (Crea)"
             DeviceNetwork ..> PathFinder : "Delega cálculos a"

             Main_PartA ..> DeviceReader : "Usa"
             Main_PartA ..> DeviceNetwork : "Llama a countPathsBetween"

             Main_PartB ..> DeviceReader : "Usa"
             Main_PartB ..> DeviceNetwork : "Llama a countPathsThrough"
@enduml